--- a/shirt/template/user/viewuser.html
+++ b/shirt/template/user/viewuser.html
@@ -8,12 +8,11 @@
 <!-- main sector /table area -->
  <div class="table-responsive-md  table-responsive-sm" >
      <table class="table table-bordered table-hover table-bordered table-striped" style="width:100em">
-         <thead class="thead bg-light">
+         <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
                 <th scope="col">User name</th>
                 <th scope="col">Email Address</th>
-               
                 <th scope="col">Actions </th>
             </tr>
          </thead>
