--- a/shirt/template/dashboard.html
+++ b/shirt/template/dashboard.html
@@ -1,6 +1,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Tshirtpoint</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand" href="#" style="color: white;">Tshirtpoint</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,19 +8,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+          <a class="nav-link" href="/" style="color: white;">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/user/userview">All Admins </a>
+          <a class="nav-link" href="/user/userview" style="color: white;" >All Admins </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/customerview">All Customers </a>
+            <a class="nav-link" href="/customerview" style="color: white;">All Customers </a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="/booking/bookingview">All Booking</a>
+            <a class="nav-link" href="/booking/bookingview" style="color: white;">All Booking</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/shirt/shirtview">All Tshirt</a>
+            <a class="nav-link" href="/shirt/shirtview" style="color: white;">All Tshirt</a>
           </li>
       </ul>
  
